--- a/index.html
+++ b/index.html
@@ -42,10 +42,42 @@
             </div>
         </div>
     </header>
+    <div class="nav_aside">
+        <div class="nav_aside_wrap">
+            <div class="nav_aside_log">
+                <a href="#" class="aside_log_search">Search</a>
+                <ul class="aside_log_inner">
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Mypage</a></li>
+                    <li><a href="#">Cart(0)</a></li>
+                </ul>
+            </div>
+            <div class="nav_aside_gnb">
+                <ul class="aside_gnb_inner">
+                    <li>
+                        <a href="#">BOOKS</a>
+                        <div class="icon"></div>
+                    </li>
+                    <li>
+                        <a href="#">GOODS</a>
+                        <div class="icon"></div>
+                    </li>
+                    <li>
+                        <a href="#">NEWS</a>
+                        <div class="icon"></div>
+                    </li>
+                    <li>
+                        <a href="#">INFO</a>
+                        <div class="icon"></div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <div class="visualSwiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="img/main_pc.png" alt="">
+                <img src="img/main_pc.jpg" alt="">
                 <div class="v_txtWrap">
                     <p>솜프레스</p>
                     <h2>판화집 Tickling Green<br>
@@ -63,7 +95,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <img src="img/main3.jpg" alt="">
+                <img src="img/main3_1.jpg" alt="">
                 <div class="v_txtWrap">
                     <p>체조스튜디오</p>
                     <h2>54개의 책갈피<br>
@@ -72,7 +104,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <img src="img/main4.jpg" alt="">
+                <img src="img/main4_1.jpg" alt="">
                 <div class="v_txtWrap">
                     <p>SMAILL BOX</p>
                     <h2>휴대용 순간들<br>
