--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                 <div class="con_img">
                                     <img src="img/goods5.jpg" loading="lazy" alt="">
                                 </div>
-                                <p class="c_title">[스냅노트]</p>
+                                <p class="c_title">스냅노트</p>
                                 <p class="c_name">노트와 메모</p>
                             </a>
                         </div>
@@ -326,7 +326,7 @@
                                 <div class="con_img">
                                     <img src="img/goods6.jpg" loading="lazy" alt="">
                                 </div>
-                                <p class="c_title">[NEW 2020]</p>
+                                <p class="c_title">NEW 2020</p>
                                 <p class="c_name">달력</p>
                                 <span class="new_badge">NEW</span>
                             </a>
